--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 	<link href="assets/css/style.css" rel="stylesheet" media="screen">
     
     <script src="assets/js/modernizr.custom.js"></script>
-       
+    <script>
+    	window.location.href="http://gongpeiqi.com";
+    </script>   
 </head>
 <body>
 
