--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     
     <script src="assets/js/modernizr.custom.js"></script>
     <script>
-    	window.location.href="http://gongpeiqi.com";
+    	window.location.href="http://www.gongpeiqi.com";
     </script>   
 </head>
 <body>
